--- a/back/package.json
+++ b/back/package.json
@@ -5,14 +5,18 @@
   "scripts": {
     "start-back": "ts-node src/back-server.ts",
     "build": "tsc",
-    "serve": "node dist/server.js"
+    "serve": "node dist/server.js",
+    "test": "jest"
   },
   "main": "index.js",
   "dependencies": {
+    "@types/jest": "^30.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jest": "^30.0.3",
+    "ts-jest": "^29.4.0",
     "ws": "^8.18.2"
   },
   "keywords": [],
