--- a/back/package.json
+++ b/back/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start-socket-server": "ts-node src/socket-server.ts",
     "start-back": "ts-node src/back-server.ts",
     "build": "tsc",
     "serve": "node dist/server.js",
@@ -10,13 +11,21 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@redis/client": "^5.5.6",
     "@types/jest": "^30.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jest": "^30.0.3",
+    "pg": "^8.16.3",
+    "redis": "^5.5.6",
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.3",
+    "sequelize-typescript": "^2.1.6",
     "ts-jest": "^29.4.0",
+    "typedi": "^0.10.0",
     "ws": "^8.18.2"
   },
   "keywords": [],
