--- a/back/package.json
+++ b/back/package.json
@@ -7,7 +7,8 @@
     "start-back": "ts-node src/back-server.ts",
     "build": "tsc",
     "serve": "node dist/server.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "npx eslint ."
   },
   "main": "index.js",
   "dependencies": {
@@ -19,6 +20,7 @@
     "express": "^5.1.0",
     "jest": "^30.0.3",
     "pg": "^8.16.3",
+    "pino": "^9.7.0",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.7",
@@ -33,11 +35,17 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
     "@types/ws": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "eslint": "^9.30.1",
+    "globals": "^16.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.1"
   }
 }
